--- a/atrium-oauth/oauth-client/Cargo.toml
+++ b/atrium-oauth/oauth-client/Cargo.toml
@@ -32,6 +32,7 @@ serde_json.workspace = true
 sha2.workspace = true
 thiserror.workspace = true
 trait-variant.workspace = true
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 
 [dev-dependencies]
 hickory-resolver.workspace = true
