--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "atrium-api",
+    "atrium-common",
     "atrium-crypto",
     "atrium-xrpc",
     "atrium-xrpc-client",
@@ -26,6 +27,7 @@ keywords = ["atproto", "bluesky"]
 [workspace.dependencies]
 # Intra-workspace dependencies
 atrium-api = { version = "0.24.7", path = "atrium-api", default-features = false }
+atrium-common = { version = "0.1.0", path = "atrium-common" }
 atrium-identity = { version = "0.1.0", path = "atrium-oauth/identity" }
 atrium-xrpc = { version = "0.11.6", path = "atrium-xrpc" }
 atrium-xrpc-client = { version = "0.5.9", path = "atrium-xrpc-client" }
