--- a/atrium-common/Cargo.toml
+++ b/atrium-common/Cargo.toml
@@ -1,22 +1,20 @@
 [package]
-name = "atrium-identity"
+name = "atrium-common"
 version = "0.1.0"
 authors = ["sugyan <sugi1982+github@gmail.com>"]
 edition.workspace = true
 rust-version.workspace = true
-description = "Resolver library for decentralized identities in atproto using DIDs and handles"
-documentation = "https://docs.rs/atrium-identity"
+description = "API library for AT Protocol (Bluesky)"
+documentation = "https://docs.rs/atrium-common"
 readme = "README.md"
 repository.workspace = true
 license.workspace = true
-keywords = ["atproto", "bluesky", "identity"]
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+keywords.workspace = true
 
 [dependencies]
 atrium-api = { workspace = true, default-features = false }
-atrium-common.workspace = true
 atrium-xrpc.workspace = true
+chrono = { workspace = true, features = ["serde"] }
 dashmap.workspace = true
 hickory-proto = { workspace = true, optional = true }
 serde = { workspace = true, features = ["derive"] }
@@ -43,7 +41,3 @@ tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
 gloo-timers.workspace = true
 tokio = { workspace = true, features = ["time"] }
 wasm-bindgen-test.workspace = true
-
-[features]
-default = []
-doh-handle-resolver = ["dep:hickory-proto"]
