--- a/atrium-api/Cargo.toml
+++ b/atrium-api/Cargo.toml
@@ -12,6 +12,7 @@ license.workspace = true
 keywords.workspace = true
 
 [dependencies]
+atrium-common.workspace = true
 atrium-xrpc.workspace = true
 chrono = { workspace = true, features = ["serde"] }
 http.workspace = true
