--- a/bsky-sdk/Cargo.toml
+++ b/bsky-sdk/Cargo.toml
@@ -14,6 +14,7 @@ keywords = ["atproto", "bluesky", "atrium", "sdk"]
 [dependencies]
 anyhow.workspace = true
 atrium-api = { workspace = true, features = ["agent", "bluesky"] }
+atrium-common.workspace = true
 atrium-xrpc-client = { workspace = true, optional = true }
 chrono.workspace = true
 psl = { version = "2.1.42", optional = true }
